# src/controller/messaging.ts
@@ -1,12 +1,10 @@
 import {
-  Path,
   Post,
   Tags,
   Response,
   Route,
   SuccessResponse,
   Controller,
-  Get,
   Body,
 } from 'tsoa';
 import { APIResponse } from '../models/APIResponse';
@@ -15,12 +13,13 @@ import { MessageRequest } from '../models/MessageRequest';
 @Route('messaging')
 @Tags('messaging')
 export class MessagingController extends Controller {
-  
   @Post('/sendMessage')
   @Response<APIResponse>(202)
   @SuccessResponse('202', 'Accepted')
-  public async sendMessage(@Body() requestBody: MessageRequest): Promise<APIResponse> {
-    console.log(`Received message: ${requestBody}`)
+  public async sendMessage(
+    @Body() requestBody: MessageRequest,
+  ): Promise<APIResponse> {
+    console.log(`Received message: ${requestBody}`);
     return {
       status: 'success',
       reason: `Received message for ${requestBody.to}`,
