# src/models/APIResponse.ts
@@ -3,8 +3,8 @@
 /* eslint-disable */
 
 export type APIResponse = {
-    status: 'success' | 'failed';
-    reason?: string;
-    errors?: any;
-    id?: string;
-}
+  status: 'success' | 'failed';
+  reason?: string;
+  errors?: any;
+  id?: string;
+};
