# src/models/MessageRequest.ts
@@ -7,8 +7,8 @@ import type { ParameterPayload } from './ParameterPayload';
 import type { TextPayload } from './TextPayload';
 
 export type MessageRequest = {
-    to: string;
-    type: 'text' | 'media';
-    provider: string;
-    payload: Array<(TextPayload | MediaPayload | ParameterPayload)>;
-}
+  to: string;
+  type: 'text' | 'media';
+  provider: string;
+  payload: Array<TextPayload | MediaPayload | ParameterPayload>;
+};
